--- a/package.json
+++ b/package.json
@@ -46,7 +46,20 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/plugin-proposal-decorators": "7.15.4",
+    "@babel/preset-typescript": "7.15.0",
+    "@craco/craco": "6.3.0",
+    "@types/classnames": "2.3.1",
+    "babel-plugin-transform-typescript-metadata": "0.3.2",
+    "cypress": "8.5.0",
+    "env-cmd": "10.1.0",
+    "eslint-plugin-cypress": "2.12.1",
+    "msw": "0.35.0",
     "prettier": "2.4.1",
-    "pretty-quick": "3.1.1"
+    "pretty-quick": "3.1.1",
+    "reflect-metadata": "0.1.13",
+    "simple-git-hooks": "2.6.1",
+    "ts-mockito": "2.6.1"
   }
 }
