object mother pattern implementation, craco, babel and reflect-metadata configs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    // para tsyringe di
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": [
     "src"
