--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "react-scripts build",
+    "build": "craco build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --ignore-path .gitignore --write ."
   },
   "eslintConfig": {
     "extends": [
