--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "hexagonal",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "env-cmd -f .env.local craco start",
+    "build": "craco build",
+    "build:dev": "env-cmd -f .env.dev craco build",
+    "build:pro": "env-cmd -f .env.pro craco build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "format": "prettier --ignore-path .gitignore --write ."
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -21,12 +30,22 @@
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
-  "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "format": "prettier --ignore-path .gitignore --write ."
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/plugin-proposal-decorators": "7.15.4",
+    "@babel/preset-typescript": "7.15.0",
+    "@craco/craco": "6.3.0",
+    "@types/classnames": "2.3.1",
+    "babel-plugin-transform-typescript-metadata": "0.3.2",
+    "cypress": "8.5.0",
+    "env-cmd": "10.1.0",
+    "eslint-plugin-cypress": "2.12.1",
+    "msw": "0.35.0",
+    "prettier": "2.4.1",
+    "pretty-quick": "3.1.1",
+    "reflect-metadata": "0.1.13",
+    "simple-git-hooks": "2.6.1",
+    "ts-mockito": "2.6.1"
   },
   "eslintConfig": {
     "extends": [
@@ -46,21 +65,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "7.14.5",
-    "@babel/plugin-proposal-decorators": "7.15.4",
-    "@babel/preset-typescript": "7.15.0",
-    "@craco/craco": "6.3.0",
-    "@types/classnames": "2.3.1",
-    "babel-plugin-transform-typescript-metadata": "0.3.2",
-    "cypress": "8.5.0",
-    "env-cmd": "10.1.0",
-    "eslint-plugin-cypress": "2.12.1",
-    "msw": "0.35.0",
-    "prettier": "2.4.1",
-    "pretty-quick": "3.1.1",
-    "reflect-metadata": "0.1.13",
-    "simple-git-hooks": "2.6.1",
-    "ts-mockito": "2.6.1"
+  "simple-git-hooks": {
+    "pre-commit": "npx pretty-quick --staged"
   }
 }
