--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,13 @@
 # misc
 .DS_Store
 
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/cypress
+/.idea
+/.vscode
+/e2e/videos
+/e2e/screenshots
