--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "17.0.26",
-    "@types/react-dom": "17.0.9",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
     "axios": "0.22.0",
     "classnames": "2.3.1",
     "i18next": "21.2.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "7.16.2",
+    "react-i18next": "11.18.3",
     "react-scripts": "5.0.1",
     "tsyringe": "4.6.0",
     "typescript": "^4.4.2",
