--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,13 +8,13 @@ on:
       - main
 jobs:
   ci:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: '14.17.0'
-      - uses: actions/cache@v3
+      - uses: actions/cache@v2
         with:
           path: ~/.yarn
           key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
