--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,6 @@ jobs:
       - name: unitaries test
         run: yarn run test
       - name: unitaries test
-        run: yarn run test:e2e:open
+        run: yarn run test:e2e:run
       - name: compile
         run: yarn run build
