--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,11 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "baseUrl": "./",
+    "paths": {
+      "*": ["packages/*/src"]
+    }
   },
   "include": ["src"]
 }
