--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,12 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14.17.0'
+      - uses: actions/cache@v2
+        with:
+          path: ~/.yarn
+          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
       - name: Echo the message
         run: |
           echo 'Hello world guys!'
@@ -24,7 +30,7 @@ jobs:
         run: yarn install
       - name: unitaries test
         run: yarn run test
-      - name: unitaries test
+      - name: e2e test
         run: yarn run test:e2e:run
       - name: compile
         run: yarn run build
