--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:pro": "env-cmd -f .env.pro craco build",
     "test": "react-scripts test --watchAll=false",
     "test:e2e:open": "npx cypress open",
-    "test:e2e:run": "cypress run",
+    "test:e2e:run": "wait-on tcp:3000 && cypress run",
     "format": "prettier --ignore-path .gitignore --write ."
   },
   "dependencies": {
@@ -47,7 +47,8 @@
     "pretty-quick": "3.1.1",
     "reflect-metadata": "0.1.13",
     "simple-git-hooks": "2.6.1",
-    "ts-mockito": "2.6.1"
+    "ts-mockito": "2.6.1",
+    "wait-on": "5.2.0"
   },
   "eslintConfig": {
     "extends": [
