--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "baseUrl": "./",
-    "paths": {
-      "*": ["packages/*/src"]
-    }
+    "emitDecoratorMetadata": true
   },
   "include": ["src"]
 }
