--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,5 +30,7 @@ jobs:
         run: yarn install
       - name: unitaries test
         run: yarn run test
+      - name: e2e test
+        run: test:e2e:run
       - name: compile
         run: yarn run build
