--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,10 @@ jobs:
         run: yarn install
       - name: unitaries test
         run: yarn run test
-      - name: e2e test
-        run: yarn run test:e2e:run
+        uses: cypress-io/github-action@v2
+        with:
+          command: yarn run test:e2e:run
+          start: yarn run start
+          wait-on: http://localhost:3000
       - name: compile
         run: yarn run build
