--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,6 +28,10 @@ jobs:
           echo 'Hello world guys!'
       - name: Install dependencies
         run: yarn install
+      - name: Eslint verify rules
+        run: yarn run lint
+      - name: Eslint fix rules
+        run: yarn run lint.fix
       - name: unitaries test
         run: yarn run test
       - name: e2e test
