--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
   "printWidth": 120,
-  "singleQuote": true,
+  "singleQuote": false,
   "semi": false,
   "arrowParens": "avoid",
   "trailingComma": "all"
