--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:e2e:run": "cypress run",
     "format": "prettier --ignore-path .gitignore --write .",
     "lint": "eslint . --ext .{js,ts,tsx}",
-    "lint.fix": "npx eslint --ext .{js,ts,tsx} --fix ."
+    "lint.fix": "npx eslint --fix ."
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
