--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "craco build",
     "build:dev": "env-cmd -f .env.dev craco build",
     "build:pro": "env-cmd -f .env.pro craco build",
-    "test": "react-scripts test --coverage --watchAll=false",
-    "test:e2e:open": "npx cypress open",
+    "test": "react-scripts test",
+    "teste2e:open": "npx cypress open",
     "test:e2e:run": "cypress run",
     "lint": "eslint . --ext .{js,ts,tsx}",
     "lint.fix": "npx eslint --fix ."
@@ -39,8 +39,8 @@
     "@babel/preset-typescript": "7.15.0",
     "@craco/craco": "6.3.0",
     "@types/classnames": "2.3.1",
-    "@typescript-eslint/eslint-plugin": "5.32.0",
-    "@typescript-eslint/parser": "5.32.0",
+    "@typescript-eslint/eslint-plugin": "5.33.0",
+    "@typescript-eslint/parser": "5.33.0",
     "babel-plugin-transform-typescript-metadata": "0.3.2",
     "cypress": "10.3.1",
     "env-cmd": "10.1.0",
@@ -52,8 +52,7 @@
     "pretty-quick": "3.1.1",
     "reflect-metadata": "0.1.13",
     "simple-git-hooks": "2.6.1",
-    "ts-mockito": "2.6.1",
-    "wait-on": "6.0.1"
+    "ts-mockito": "2.6.1"
   },
   "eslintConfig": {
     "extends": [
@@ -75,5 +74,8 @@
   },
   "msw": {
     "workerDirectory": "public"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx pretty-quick --staged"
   }
 }
