--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,15 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": [
+  "plugins": ["@typescript-eslint"],
+  "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
     "quotes": ["error", "double"],
-    "@typescript-eslint/no-explicit-any": ["warn", { "fixToUnkown": true }],
+    "@typescript-eslint/no-explicit-any": ["warn"],
     "curly": "error",
     "no-empty": "error"
   }
