--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,7 +32,7 @@ jobs:
         run: yarn run lint
 
   test-unitary:
-    needs: [ci]
+    needs: ci
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
