--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
         run: |
           echo '!Hello guys from CI in react with TS!'
       - name: Install dependencies
-        run: yarn install
+        run: yarn ci
       - name: Eslint verify rules
         run: yarn run lint
 
@@ -37,7 +37,7 @@ jobs:
           cache: "yarn"
           node-version: "14.17.0"
       - name: Install dependencies
-        run: yarn install
+        run: yarn ci
       - name: compile
         run: yarn run build
       - uses: actions/upload-artifact@v2
@@ -57,7 +57,7 @@ jobs:
           cache: "yarn"
           node-version: "14.17.0"
       - name: Install dependencies
-        run: yarn install
+        run: yarn ci
       - uses: actions/download-artifact@v2
         with:
           name: build
@@ -77,7 +77,7 @@ jobs:
           cache: "yarn"
           node-version: "14.17.0"
       - name: Install dependencies
-        run: yarn install
+        run: yarn ci
       - uses: actions/download-artifact@v2
         with:
           name: build
