--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -112,4 +112,5 @@ jobs:
           heroku_app_name: ${{secrets.HEROKU_APP}}
           heroku_email: ${{secrets.HEROKU_EMAIL}}
           healthcheck: "https://${{secrets.HEROKU_APP}}.herokuapp.com/health"
+          checkstring: "ok"
           rollbackonhealthcheckfailed: true
