--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "18.0.6",
     "axios": "0.22.0",
     "classnames": "2.3.1",
+    "express": "4.18.1",
     "i18next": "21.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
