--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -126,4 +126,10 @@ jobs:
         with:
           fetch-depth: 0
       - name: Deploy to Gh-Pages
-        run: yarn run deploy
+        if: success()
+        uses: crazy-max/ghaction-github-pages@v3
+        with:
+          target_branch: gh-pages
+          build_dir: build
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
