--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -125,11 +125,17 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Deploy to Gh-Pages
-        if: success()
-        uses: crazy-max/ghaction-github-pages@v3
+      - uses: actions/setup-node@v2
         with:
-          target_branch: gh-pages
-          build_dir: public
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          cache: "yarn"
+          node-version: "14.17.0"
+      - name: Install and Build
+        run: |
+          yarn install
+          yarn run build
+      - name: Deploy to Gh-Pages
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          github_token: ${{github.token}}
+          branch: gh-pages
+          folder: build
