--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,3 +30,5 @@ jobs:
         run: yarn install
       - name: Eslint verify rules
         run: yarn run lint
+      - name: unitaries test
+        run: yarn run test
