--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "craco build",
     "build:dev": "env-cmd -f .env.dev craco build",
     "build:pro": "env-cmd -f .env.pro craco build",
-    "test": "react-scripts test --coverage --watchAll=false",
+    "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --watchAll",
     "teste2e:open": "npx cypress open",
     "test:e2e:run": "cypress run",
     "format": "prettier --ignore-path .gitignore --write .",
