--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,3 +32,6 @@ jobs:
         run: yarn run lint
       - name: unitaries test
         run: yarn run test
+      - name: e2e test
+        run: yarn run test:e2e:run
+        #uses: cypress-io/github-action@v2
