including build to CI and script serve pre-production

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,3 +38,5 @@ jobs:
           command: yarn run test:e2e:run
           start: yarn run start
           wait-on: http://localhost:3000
+      - name: compile build
+        run: yarn run build
