including comments with others values properties for projects with server in CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -123,3 +123,4 @@ jobs:
           #rollbackonhealthcheckfailed: true
           #delay: 3
           #procfile: web: yarn start
+          #branch: main
