--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hexagonal",
   "version": "0.1.1",
   "private": true,
+  "homepage": "https://dev-miguel-resources.github.io/react-advanced",
   "scripts": {
     "start": "env-cmd -f .env.local craco start",
     "build": "craco build",
@@ -14,7 +15,9 @@
     "format": "prettier --ignore-path .gitignore --write .",
     "lint": "eslint . --ext .{js,ts,tsx}",
     "lint.fix": "npx eslint --fix .",
-    "serve": "serve -s build"
+    "serve": "serve -s build",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -26,6 +29,7 @@
     "@types/react-dom": "18.0.6",
     "axios": "0.22.0",
     "classnames": "2.3.1",
+    "gh-pages": "4.0.0",
     "i18next": "21.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
