--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,6 +37,26 @@ jobs:
       - name: Eslint verify rules
         run: yarn run lint
 
+  snyk-monitor-clean-code-and-vulnerabilities:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v2
+        with:
+          cache: "yarn"
+          node-version: "14.17.0"
+      - name: Install dependencies
+        run: yarn install
+      - uses: actions/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          command: monitor
+
   build:
     runs-on: ubuntu-20.04
     steps:
