--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -77,7 +77,7 @@ jobs:
           path: build
 
   test-unitaries:
-    needs: [ci-message-and-linter, build]
+    needs: [ci-message-and-linter, build, snyk-monitor-clean-code-and-vulnerabilities]
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -125,7 +125,7 @@ jobs:
           wait-on: http://localhost:3000
 
   deploy-heroku-cloud:
-    needs: [test-unitaries, tests-e2e]
+    needs: [test-unitaries, tests-e2e, snyk-monitor-clean-code-and-vulnerabilities]
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -138,12 +138,12 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP}}
           heroku_email: ${{secrets.HEROKU_EMAIL}}
+          procfile web: yarn start
+          branch: main
           #healthcheck: "https://${{secrets.HEROKU_SERVER}}.herokuapp.com/health"
           #checkstring: "ok"
           #rollbackonhealthcheckfailed: true
           #delay: 3
-          #procfile: web: yarn start
-          #branch: main
 
   deploy-ghpages-cloud:
     needs: [test-unitaries, tests-e2e]
